[gd_scene load_steps=14 format=2]

[ext_resource path="res://LevelMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/2.png" type="Texture" id=5]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sprites/Objects/finish_line_static.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/NIKU-White-idle.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="LevelMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 704, 225 )
scale = Vector2( 3, 3 )
frames = SubResource( 5 )
frame = 1
speed_scale = 3.0
playing = true

[node name="Control" type="Control" parent="."]
margin_top = 8.0
margin_right = 1440.0
margin_bottom = 728.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control"]
margin_left = 619.0
margin_top = 328.0
margin_right = 799.0
margin_bottom = 338.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tutorial Levels"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
margin_left = 600.0
margin_top = 408.0
margin_right = 828.0
margin_bottom = 418.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Make Your Own Game!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control"]
margin_left = 592.0
margin_top = 120.0
margin_right = 832.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NIKU'S RGB Adventure"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
margin_left = 640.0
margin_top = 352.0
margin_right = 780.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Control/HBoxContainer"]
margin_right = 32.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
stretch_mode = 2

[node name="TextureButton2" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
stretch_mode = 2

[node name="TextureButton3" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
stretch_mode = 2

[node name="TextureButton4" type="TextureButton" parent="Control/HBoxContainer"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
stretch_mode = 2

[node name="TextureButton5" type="TextureButton" parent="Control"]
margin_left = 696.0
margin_top = 440.0
margin_right = 728.0
margin_bottom = 472.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="Control/TextureButton5" to="." method="_on_TextureButton5_pressed"]
